# serenity

AK/: IntegralMath.h  Math.h  StdLibExtras.h  URL.cpp  URL.h  URLParser.cpp
Base/etc/: SystemServer.ini
Base/res/icons/: SystemMenu.ini
Base/res/themes/: Areo.ini  Luna.ini
Kernel/: Process.cpp  ProcessSpecificExposed.cpp
Kernel/FileSystem/: VirtualFileSystem.cpp
Ladybird/: Tab.cpp
Ladybird/Icons/: back.tvg  back.tvgt  forward.tvg  reload.tvg
Meta/CMake/: all_the_debug_macros.cmake  utils.cmake
Meta/Lagom/: CMakeLists.txt
Tests/AK/: TestURL.cpp
Tests/LibWeb/Ref/: border-radius.html  svg-simple-clipPath.html
Userland/Applets/Audio/: CMakeLists.txt  main.cpp
Userland/Applets/ClipboardHistory/: CMakeLists.txt  main.cpp
Userland/Applets/Network/: CMakeLists.txt  main.cpp
Userland/Applications/Browser/: BrowserWindow.cpp  CMakeLists.txt  IconBag.cpp  main.cpp
Userland/Applications/Calculator/: CMakeLists.txt  main.cpp
Userland/Applications/Calendar/: main.cpp
Userland/Applications/ImageViewer/: ViewWidget.cpp  ViewWidget.h
Userland/Applications/MouseSettings/: CMakeLists.txt  Highlight.gml  HighlightPreviewWidget.cpp  HighlightPreviewWidget.h  HighlightWidget.cpp  (+2 more)
Userland/Libraries/: CMakeLists.txt
Userland/Services/: CMakeLists.txt
Userland/Services/ResourceServer/: CMakeLists.txt  ConnectionFromClient.cpp  ConnectionFromClient.h  PathResolver.cpp  PathResolver.h  Resolver.cpp  Resolver.h  ResourceClient.ipc  ResourceServer.ipc  main.cpp
Userland/Utilities/: CMakeLists.txt  icontheme.cpp  ttfdisasm.cpp  ttfhint.cpp  ttfhintdump.cpp
(+246 files in other folders)
